# Zukan-Icon-Theme

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  Default.sublime-commands  LICENSE  Main.sublime-menu  PYTHON.md  README.md  dependencies.json  file_type_icon.py  main.py  plugin.py  pyproject.toml  pytest.ini  ruff.toml  unittesting.json
aliases/: Binary (Affinity Designer).sublime-syntax  Binary (Affinity Photo).sublime-syntax  Binary (Affinity Publisher).sublime-syntax  Binary (Autodesk Fusion 360).sublime-syntax  Binary (Bun).sublime-syntax  Binary (Protobuf).sublime-syntax  Binary (WebAssembly).sublime-syntax  JSON (Angular).sublime-syntax  JSON (Babel).sublime-syntax  JSON (Swc).sublime-syntax  JSON (Turbo).sublime-syntax  JSON (TypeScript).sublime-syntax  JSX (Storybook).sublime-syntax  JavaScript (Babel).sublime-syntax  JavaScript (CommonJS).sublime-syntax  JavaScript (ESLint).sublime-syntax  JavaScript (Jest).sublime-syntax  JavaScript (NextJS).sublime-syntax  JavaScript (Prettier).sublime-syntax  JavaScript (Rspack).sublime-syntax  JavaScript (SWC).sublime-syntax  JavaScript (Storybook).sublime-syntax  JavaScript (UnoCSS).sublime-syntax  JavaScript (Vite).sublime-syntax  JavaScript (Vitest).sublime-syntax  JavaScript (Yarn).sublime-syntax  JavaScript (pnpm).sublime-syntax  Markdown (Citation).sublime-syntax  Markdown (Code of Conduct).sublime-syntax  Markdown (License).sublime-syntax  Markdown (Readme).sublime-syntax  Markdown (mdx).sublime-syntax  Plain Text (Bun).sublime-syntax  Plain Text (CAD).sublime-syntax  Plain Text (Citation).sublime-syntax  Plain Text (FlatBuffers).sublime-syntax  Plain Text (Go).sublime-syntax  Plain Text (License).sublime-syntax  Plain Text (OpenGl).sublime-syntax  Plain Text (Prettier).sublime-syntax  (+31 more)
assets/: view-concat-svgs.html
docs/: build.md  file-icon.md  plugin.md  theme.md  troubleshooting.md
examples/: .gitignore  .npmrc  .ruff.toml  CmakeLists.txt  Makefile  Storybook.stories.js  Storybook.stories.ts  _sass.sass  c#.cs  c++.cpp  c.c  c.m  css.css  erlang.erl  ex.exs  excel.xlsx  flatbuffers.fbs  go.go  html.html  java.java  json.json  kotlin.kt  less.less  lua.lua  md.md  mdx.mdx  netlify.toml  nginx.conf  opengl.glsl  package.json  php.php  pnpm-lock.yaml  pnpm-workspace.yaml  python.py  rails.rb  react.jsx  rspack.config.js  rspack.config.ts  rust.rs  scss.scss  (+19 more)
icons/: Treble Adaptive.sublime-theme
icons_data/: zukan_icons_data.pkl
icons_preferences/: zukan_preferences_data.pkl
icons_syntaxes/: Arduino.sublime-syntax  BibTeX (Citation).sublime-syntax  Binary (Adobe Illustrator).sublime-syntax  Binary (Adobe Photoshop).sublime-syntax  Binary (Affinity Designer).sublime-syntax  Binary (Affinity Photo).sublime-syntax  Binary (Affinity Publisher).sublime-syntax  Binary (Archive).sublime-syntax  Binary (Audio).sublime-syntax  Binary (Autodesk Fusion 360).sublime-syntax  Binary (Blender).sublime-syntax  Binary (Bun).sublime-syntax  Binary (Image).sublime-syntax  Binary (Microsoft Excel).sublime-syntax  Binary (Microsoft Word).sublime-syntax  Binary (PDF).sublime-syntax  Binary (Protobuf).sublime-syntax  Binary (Video).sublime-syntax  Binary (WebAssembly).sublime-syntax  Binary (glTF).sublime-syntax  C++ (Header).sublime-syntax  CMake C Header.sublime-syntax  CMake C++ Header.sublime-syntax  CMake.sublime-syntax  CMakeCache.sublime-syntax  CMakeEditor.sublime-syntax  CSS (Django).sublime-syntax  Dockerfile.sublime-syntax  EEx.sublime-syntax  Elixir (EEx).sublime-syntax  Elixir.sublime-syntax  Fortran (Fixed Form).sublime-syntax  Fortran (Modern).sublime-syntax  Fortran Namelist.sublime-syntax  Git (Docker).sublime-syntax  Git (ESLint).sublime-syntax  Git (Prettier).sublime-syntax  Git Blame.sublime-syntax  (+141 more)
(+830 files in other folders)
