[tool.poetry]
name = "Zukan Icon Theme"
version = "0.4.7"
description = "Icon theme for Sublime Text"
license = "MIT"
authors = ["Seven Eda <53v3n3d4@gmail.com>"]
readme = "README.md"
repository = "https://github.com/53v3n3d4/Zukan-Icon-Theme"
# Install local package with poetry.
# https://github.com/orgs/python-poetry/discussions/1135
# https://python-poetry.org/docs/pyproject/#packages
# Setting below needed to run poetry scripts [tool.poetry.scripts].
packages = [
    { include = "../Zukan Icon Theme" }
]

[tool.poetry.dependencies]
# .python-version file should be 3.12.3 while using 'poetry install', if not,
# could fail to install dependencies
python = "^3.13.1"

[tool.poetry.group.dev.dependencies]
# Need cairo installed. brew install cairo
cairosvg = "^2.7.1"
ruamel-yaml = "^0.18.10"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pyfakefs = "^5.7.3"

[tool.poetry.group.lint-format.dependencies]
ruff = "^0.9.1"

[tool.poetry.scripts]
# poetry run build --help
# Examples:
# Generate PNGs, zukan preferences and syntaxes file.
# poetry run build icon-theme -f src/data/afdesign.yaml
# poetry run build icon-theme --all
build = "src.build.scripts:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
