[project]
name = "Zukan-Icon-Theme"
version = "0.4.9"
requires-python = ">=3.13"
authors = [
  {name = "Seven Eda", email = "53v3n3d4@gmail.com"}
]
description = "Icon theme for Sublime Text"
readme = "README.md"
license = "MIT"

[project.urls]
Repository = "https://github.com/53v3n3d4/Zukan-Icon-Theme"

# uv pip install -e .
[project.scripts]
build = "src.build.scripts:main"

[dependency-groups]
dev = [
  "cairosvg >=2.8.2",
  "ruamel-yaml >=0.18.15"
]
test = [
  "pytest >=8.4.2",
  "pytest-cov >=7.0.0",
  "pyfakefs >=5.9.3"
]
lint = [
  "ruff >=0.13.3"
]

[tool.uv]
default-groups = ["dev", "test", "lint"]

# https://docs.astral.sh/uv/concepts/build-backend/#namespace-packages
# https://docs.astral.sh/uv/reference/settings/#build-backend_source-include
[tool.uv.build-backend]
module-root = ""
module-name = "build"
namespace = true

# https://docs.astral.sh/uv/reference/settings/#workspace
# [tool.uv.workspace]
# exclude = ["zukan_icon_theme"]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
